# Mp4ToTranscript

./: .gitignore  Mp4ToTranscript.py  README.md  pyproject.toml  requirements.txt
mp4_to_transcript/: __init__.py  cli.py
tests/: test_cli.py
